app/styles/public/_footer.scss
//
// Footer
// --------------------------------------------------


// Base styles
// -------------------------

footer {
  color: rgba($white, .27);
  font-size: 14px;
  position: relative;
  // transition: $ease-out-quint-slow;
  z-index: 1;

  h3 {
    font-size: 14px;
    font-weight: 400;
    margin: 0;
  }

  a {
    color: rgba($white, .27);
    display: inline-block;
    font-weight: 300;

    &:hover {
      color: $gold;
    }
  }

  #contact {
    float: left;

    a {
      margin-right: 9px;

      @media (min-width: $screen-lg-min) {
        margin-right: 18px;
      }
    }
  }

  #colophon {
    float: right;
    position: absolute;
    right: 0;
    text-align: right;

    @media (max-width: $screen-sm-max) {
      color: rgba(0, 0, 0, 0);
      pointer-events: none;
      transition: $ease-out-quint-slow;
    }
  }

  &:before,
  &:after {
    content: ' ';
    display: table;
  }

  &:after {
    clear: both;
  }
}

